cluster/apps/longhorn-system/authentik-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    hajimari.io/enable: "true"
    hajimari.io/icon: harddisk
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2021.12.3
  name: authentik-outpost
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: authentik-outpost
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.${SECRET_DOMAIN}
      secretName: longhorn-cert
